Bug 1736384 - Don't create IMContextWrapper GTK style provider unnecessarily. r=stransky

I don't know whether all this style provider business is still
necessary looking at bug 1461307, but this should help by avoiding
initializing LookAndFeel too early in any case.

Differential Revision: https://phabricator.services.mozilla.com/D130633